--- a/index.html
+++ b/index.html
@@ -12,6 +12,281 @@
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="logo" />
+        <nav>
+            <ul>
+                <li>Hébergement</li>
+                <li>Activités</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="menu">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre-ville ou en pleine nature</p>
+            <div class="search-bar">
+                <label for="search-input">
+                    <i class="fa-solid fa-location-dot"></i>
+                </label>
+                <input type="search" name="search-input" id="search-input">
+                <button type="submit">Rechercher</button>
+            </div>
+            <fieldset>
+                <legend>Filtres</legend>
+                <div class="form-group">
+                    <label for="economic">
+                        <span>
+                            <i class="fa-solid fa-money-bill"></i>
+                        </span>
+                        Economique
+                        <input type="radio" name="filters" id="economic">
+                    </label>
+                    <label for="family">
+                        <span>
+                            <i class="fa-solid fa-person"></i>
+                        </span>
+                        Familiale
+                        <input type="radio" name="filters" id="family">
+                    </label>
+                    <label for="romantic">
+                        <span>
+                            <i class="fa-solid fa-heart"></i>
+                        </span>
+                        Romantique
+                        <input type="radio" name="filters" id="romantic">
+                    </label>
+                    <label for="pets-allowed">
+                        <span>
+                            <i class="fa-solid fa-dog"></i>
+                        </span>
+                        Animaux autorisés
+                        <input type="radio" name="filters" id="pets-allowed">
+                    </label>
+                </div>
+            </fieldset>
+            <div>
+                <i class="fa-solid fa-info"></i>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            </div>
+        </div>
+        <div>
+            <section>
+                <h2>Hébergements à Marseille</h2>
+                <div class="grid">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel du port</h4>
+                            <p>Nuit à partir de 52€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel Les mouettes</h4>
+                            <p>Nuit à partir de 76€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel de la mer</h4>
+                            <p>Nuit à partir de 46€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Auberge Le Panier</h4>
+                            <p>Nuit à partir de 23€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel Chez Amina</h4>
+                            <p>Nuit à partir de 96€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Auberge La Canebière</h4>
+                            <p>Nuit à partir de 25€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button type="btn">Afficher plus</button>
+            </section>
+            <aside>
+                <div>
+                    <h2>Les plus populaires</h2>
+                    <i class="fa-solid fa-chart-line"></i>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel Le soleil du matin</h4>
+                            <p>Nuit à partir de 128€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Chambres d'hôtes Au coeur de l'eau</h4>
+                            <p>Nuit à partir de 71€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="" alt="" />
+                        </div>
+                        <div class="card-content">
+                            <h4>Hôtel Bleu et Blanc</h4>
+                            <p>Nuit à partir de 68€</p>
+                            <div class="rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </aside>
+        </div>
+        <section>
+            <h2>Activités à Marseille</h2>
+            <div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h4>Vieux-Port</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h4>Fort de Pomègues</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h4>Parc national des Calanques</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="" alt="" />
+                    </div>
+                    <div class="card-content">
+                        <h4>Notre-Dame-de-la-Garde</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container">
+            <div>
+                <h3>A propos</h3>
+                <a href="#">Fonctionnement du site</a>
+                <a href="#">Conditions générales</a>
+                <a href="#">Données et confidentialité</a>
+            </div>
+            <div>
+                <h3>Nos hébergements</h3>
+                <a href="#">Charte qualité</a>
+                <a href="#">Proposer votre hôtel</a>
+            </div>
+            <div>
+                <h3>Assistance</h3>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
