Desktop version updated in order to fix card elements

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div class="container">
             <section id="accomodations">
                 <h2>Hébergements à Marseille</h2>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/acc_img1_xl.jpg 5993w, assets/acc_img1_lg.jpg 2997w, assets/acc_img1_md.jpg 1499w, assets/acc_img1_sm.jpg 750w"
@@ -96,8 +96,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/acc_img2_xl.jpg 5993w, assets/acc_img2_lg.jpg 2997w, assets/acc_img2_md.jpg 1499w, assets/acc_img2_sm.jpg 750w"
@@ -118,8 +118,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/acc_img3_xl.jpg 5993w, assets/acc_img3_lg.jpg 299w, assets/acc_img3_md.jpg 1499w, assets/acc_img3_sm.jpg 750w"
@@ -140,8 +140,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/acc_img4_xl.jpg 5993w, assets/acc_img4_lg.jpg 2997w, assets/acc_img4_md.jpg 1499w, assets/acc_img4_sm.jpg 750w"
@@ -162,8 +162,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img
                             class="card__img"
                             srcset="assets/acc_img5_xl.jpg 5993w, assets/acc_img5_lg.jpg 2997w, assets/acc_img5_md.jpg 1499w, assets/acc_img5_sm.jpg 750w"
@@ -184,8 +184,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/acc_img6_xl.jpg 5993w, assets/acc_img6_lg.jpg 2997w, assets/acc_img6_md.jpg 1499w, assets/acc_img6_sm.jpg 750w"
@@ -210,8 +210,8 @@
             </section>
             <aside id="most-popular">
                 <h2>Les plus populaires <i class="fa-solid fa-chart-line"></i></h2>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/mp_img1_xl.jpg 5993w, assets/mp_img1_lg.jpg 2997w, assets/mp_img1_md.jpg 1499w, assets/mp_img1_sm.jpg 750w"
@@ -232,8 +232,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/mp_img2_xl.jpg 5993w, assets/mp_img2_lg.jpg 2997w, assets/mp_img2_md.jpg 1499w, assets/mp_img2_sm.jpg 750w"
@@ -254,8 +254,8 @@
                         </div>
                     </a>
                 </article>
-                <article>
-                    <a class="card card--border" href="#">
+                <article class="card card--border">
+                    <a href="#">
                         <img 
                             class="card__img"
                             srcset="assets/mp_img3_xl.jpg 5993w, assets/mp_img3_lg.jpg 2997w, assets/mp_img3_md.jpg 1499w, assets/mp_img3_sm.jpg 750w"
@@ -280,8 +280,8 @@
         </div>
         <section id="activities">
             <h2>Activités à Marseille</h2>
-            <div class="wrapper">
-                <a class="card" href="#">
+            <div class="card">
+               <a href="#">
                     <img 
                         class="card__img"
                         srcset="assets/act_img1_xl.jpg 5993w, assets/act_img1_lg.jpg 2997w, assets/act_img1_md.jpg 1499w, assets/act_img1_sm.jpg 750w"
@@ -294,8 +294,8 @@
                     </div>
                 </a>
             </div>
-            <div class="wrapper">
-                <a class="card" href="#">
+            <div class="card">
+               <a href="#">
                     <img 
                         class="card__img"
                         srcset="assets/act_img2_xl.jpg 5993w, assets/act_img2_lg.jpg 2997w, assets/act_img2_md.jpg 1499w, assets/act_img2_sm.jpg 750w"
@@ -308,8 +308,8 @@
                     </div>
                 </a>
             </div>
-            <div class="wrapper">
-                <a class="card" href="#">
+            <div class="card">
+               <a href="#">
                     <img 
                         class="card__img"
                         srcset="assets/act_img3_xl.jpg 5993w, assets/act_img3_lg.jpg 2997w, assets/act_img3_md.jpg 1499w, assets/act_img3_sm.jpg 750w"
@@ -322,8 +322,8 @@
                     </div>
                 </a>
             </div>
-            <div class="wrapper">
-                <a class="card" href="#">
+            <div class="card">
+               <a href="#">
                     <img 
                         class="card__img"
                         srcset="assets/act_img4_xl.jpg 5993w, assets/act_img4_lg.jpg 2997w, assets/act_img4_md.jpg 1499w, assets/act_img4_sm.jpg 750w"
