--- a/index.html
+++ b/index.html
@@ -76,13 +76,7 @@
                 <h2>Hébergements à Marseille</h2>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/acc_img1_xl.jpg 5993w, assets/acc_img1_lg.jpg 2997w, assets/acc_img1_md.jpg 1499w, assets/acc_img1_sm.jpg 750w"
-                            src="assets/acc_img1_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière"
-                        >
+                        <img class="card__img" src="assets/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière" >
                         <div class="card__content">
                             <h3>Auberge La Canebière</h3>
                             <p>Nuit à partir de 25€</p>
@@ -98,13 +92,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/acc_img2_xl.jpg 5993w, assets/acc_img2_lg.jpg 2997w, assets/acc_img2_md.jpg 1499w, assets/acc_img2_sm.jpg 750w"
-                            src="assets/acc_img2_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre lit double et lit simple de l'Hôtel du port"
-                        >
+                        <img class="card__img" src="assets/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre lit double et lit simple de l'Hôtel du port" >
                         <div class="card__content">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
@@ -120,13 +108,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/acc_img3_xl.jpg 5993w, assets/acc_img3_lg.jpg 299w, assets/acc_img3_md.jpg 1499w, assets/acc_img3_sm.jpg 750w"
-                            src="assets/acc_img3_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre avec penderie de l'Hôtel Les mouettes"
-                        >
+                        <img class="card__img" src="assets/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre avec penderie de l'Hôtel Les mouettes" >
                         <div class="card__content">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
@@ -142,13 +124,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/acc_img4_xl.jpg 5993w, assets/acc_img4_lg.jpg 2997w, assets/acc_img4_md.jpg 1499w, assets/acc_img4_sm.jpg 750w"
-                            src="assets/acc_img4_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer"
-                        >
+                        <img class="card__img" src="assets/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer" >
                         <div class="card__content">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de 46€</p>
@@ -164,13 +140,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img
-                            class="card__img"
-                            srcset="assets/acc_img5_xl.jpg 5993w, assets/acc_img5_lg.jpg 2997w, assets/acc_img5_md.jpg 1499w, assets/acc_img5_sm.jpg 750w"
-                            src="assets/acc_img5_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier"
-                        >
+                        <img class="card__img" src="assets/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier" >
                         <div class="card__content">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de 23€</p>
@@ -186,13 +156,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/acc_img6_xl.jpg 5993w, assets/acc_img6_lg.jpg 2997w, assets/acc_img6_md.jpg 1499w, assets/acc_img6_sm.jpg 750w"
-                            src="assets/acc_img6_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina"
-                        >
+                        <img class="card__img" src="assets/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina" >
                         <div class="card__content">
                             <h3>Hôtel Chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
@@ -212,13 +176,7 @@
                 <h2>Les plus populaires <i class="fa-solid fa-chart-line"></i></h2>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/mp_img1_xl.jpg 5993w, assets/mp_img1_lg.jpg 2997w, assets/mp_img1_md.jpg 1499w, assets/mp_img1_sm.jpg 750w"
-                            src="assets/mp_img1_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin"
-                        >
+                        <img class="card__img" src="assets/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin" >
                         <div class="card__content">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
@@ -234,13 +192,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/mp_img2_xl.jpg 5993w, assets/mp_img2_lg.jpg 2997w, assets/mp_img2_md.jpg 1499w, assets/mp_img2_sm.jpg 750w"
-                            src="assets/mp_img2_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double"
-                        >
+                        <img class="card__img" src="assets/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double" >
                         <div class="card__content">
                             <h3>Chambres d'hôtes Au coeur de l'eau</h3>
                             <p>Nuit à partir de 71€</p>
@@ -256,13 +208,7 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img 
-                            class="card__img"
-                            srcset="assets/mp_img3_xl.jpg 5993w, assets/mp_img3_lg.jpg 2997w, assets/mp_img3_md.jpg 1499w, assets/mp_img3_sm.jpg 750w"
-                            src="assets/mp_img3_xl.jpg"
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                            alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc"
-                        >
+                        <img class="card__img" src="assets/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc" >
                         <div class="card__content">
                             <h3>Hôtel Bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
@@ -282,13 +228,7 @@
             <h2>Activités à Marseille</h2>
             <div class="card">
                <a href="#">
-                    <img 
-                        class="card__img"
-                        srcset="assets/act_img1_xl.jpg 5993w, assets/act_img1_lg.jpg 2997w, assets/act_img1_md.jpg 1499w, assets/act_img1_sm.jpg 750w"
-                        src="assets/act_img1_xl.jpg"
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                        alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille"
-                    >
+                    <img class="card__img" src="assets/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille" >
                     <div class="card__content">
                         <p>Vieux-Port</p>
                     </div>
@@ -296,13 +236,7 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img 
-                        class="card__img"
-                        srcset="assets/act_img2_xl.jpg 5993w, assets/act_img2_lg.jpg 2997w, assets/act_img2_md.jpg 1499w, assets/act_img2_sm.jpg 750w"
-                        src="assets/act_img2_xl.jpg"
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                        alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues"
-                    >
+                    <img class="card__img" src="assets/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues" >
                     <div class="card__content">
                         <p>Fort de Pomègues</p>
                     </div>
@@ -310,13 +244,7 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img 
-                        class="card__img"
-                        srcset="assets/act_img3_xl.jpg 5993w, assets/act_img3_lg.jpg 2997w, assets/act_img3_md.jpg 1499w, assets/act_img3_sm.jpg 750w"
-                        src="assets/act_img3_xl.jpg"
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                        alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin"
-                    >
+                    <img class="card__img" src="assets/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin" >
                     <div class="card__content">
                         <p>Parc national des Calanques</p>
                     </div>
@@ -324,13 +252,7 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img 
-                        class="card__img"
-                        srcset="assets/act_img4_xl.jpg 5993w, assets/act_img4_lg.jpg 2997w, assets/act_img4_md.jpg 1499w, assets/act_img4_sm.jpg 750w"
-                        src="assets/act_img4_xl.jpg"
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
-                        alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde"
-                    >
+                    <img class="card__img" src="assets/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde" >
                     <div class="card__content">
                         <p>Notre-Dame-de-la-Garde</p>
                     </div>
