Update mainly related to image display

--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 5993w, images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2997w, images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1499w, images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
-                            src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                             alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière" 
                         >
                         <div class="card__content">
@@ -100,9 +98,10 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 5993w, images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2997w, images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1499w, images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 750w"
                             src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            srcset="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1368w, 
+                                    images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 684w"
+                            sizes="(min-width: 721px) and (max-width: 768px) 1368px, 684px"
                             alt="Chambre lit double et lit simple de l'Hôtel du port" 
                         >
                         <div class="card__content">
@@ -122,9 +121,7 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 5993w, images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 2997w, images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1499w, images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
                             src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre avec penderie de l'Hôtel Les mouettes" 
                         >
                         <div class="card__content">
@@ -144,9 +141,10 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 5993w, images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2997w, images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1499w, images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 750w"
                             src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            srcset="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1000w, 
+                                    images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 500w"
+                            sizes="(min-width: 537px) and (max-width: 768px) 1000px, 500px"
                             alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer" 
                         >
                         <div class="card__content">
@@ -166,9 +164,10 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 5993w, images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2997w, images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1499w, images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 750w"
+                            srcset="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1303w, 
+                                    images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 652w"
                             src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            sizes="(min-width: 689px) and (max-width: 768px) 1303px, 652px"
                             alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier" 
                         >
                         <div class="card__content">
@@ -188,9 +187,10 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 5993w, images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2997w, images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 1499w, images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 750w"
                             src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            srcset="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 972w, 
+                                    images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 486w"
+                            sizes="(min-width: 523px) and (max-width: 768px) 972px, 486px"
                             alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina" 
                         >
                         <div class="card__content">
@@ -214,9 +214,10 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 5993w, images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2997w, images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1499w, images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 750w"
                             src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            srcset="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1063w, 
+                                    images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 532w"
+                            sizes="(min-width: 569px) and (max-width: 768px) 1063px, 532px"
                             alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin" 
                         >
                         <div class="card__content">
@@ -236,9 +237,7 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 5993w, images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 2997w, images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 1499w, images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg 750w"
                             src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double" 
                         >
                         <div class="card__content">
@@ -258,9 +257,7 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 5993w, images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2997w, images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 1499w, images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg 750w"
                             src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" 
-                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc" 
                         >
                         <div class="card__content">
@@ -284,9 +281,10 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 5993w, images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 2997w, images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1499w, images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 750w"
-                        src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" 
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                        srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
+                                images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 702w"
+                        sizes="(min-width:733px) and (max-width:768px) 1404px, 702px"
                         alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille" 
                     >
                     <div class="card__content">
@@ -298,9 +296,11 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="images/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg 5993w, images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2997w, images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 1499w, images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 750w"
-                        src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                        srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 711w,
+                                images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 356w"
+                        sizes="(min-width: 388px) and (max-width: 768px) 711px, 
+                                356px"
                         alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues" 
                     >
                     <div class="card__content">
@@ -312,9 +312,10 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 5993w, images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 2997w, images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1499w, images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 750w"
-                        src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                        srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
+                                images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 606w"
+                        sizes="(min-width: 637px) and (max-width: 768px) 1212px, 606px"
                         alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin" 
                     >
                     <div class="card__content">
@@ -326,9 +327,10 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="images/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 5993w, images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg 2997w, images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1499w, images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 750w"
                         src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
-                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w, 
+                                images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 589w"
+                        sizes="(min-width: 620px) and (max-width: 768px) 1178px, 589px"
                         alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde" 
                     >
                     <div class="card__content">
